--- a/contact.html
+++ b/contact.html
@@ -37,24 +37,20 @@ group: navigation
           <textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
           <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
       </div>
-      <div class="form-group">
-        <label for="InputReal">What is 4+3? (Simple Spam Checker)</label>
-        <div class="input-group">
-          <input type="text" class="form-control" name="InputReal" id="InputReal" required>
-          <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
-      </div>
-      <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info pull-right">
+            <input type="submit" name="submit" id="submit" value="Envoyer" class="btn btn-info pull-right">
     </div>
   </form>
   <hr class="featurette-divider hidden-lg">
   <div class="col-lg-5 col-md-push-1">
     <address>
     <h3>Notre adresse</h3>
-    <p class="lead"><a href="https://www.google.com/maps/preview?ie=UTF-8&q=The+Pentagon&fb=1&gl=us&hq=1400+Defense+Pentagon+Washington,+DC+20301-1400&cid=12647181945379443503&ei=qmYfU4H8LoL2oATa0IHIBg&ved=0CKwBEPwSMAo&safe=on">The Pentagon<br>
-Washington, DC 20301</a><br>
-      Phone: XXX-XXX-XXXX<br>
-      Fax: XXX-XXX-YYYY</p>
-    </address>
+            <strong>ELYGESTION</strong><br>
+            795 Folsom Ave, Suite 600<br>
+            San Francisco, CA 94107<br>
+            <abbr title="Phone">Tél :</abbr> 04.90.90.90.90<br>
+            <abbr title="Fax">Fax :</abbr> 04.90.90.90.90<br>
+            <abbr title="MAIL">MAIL :</abbr> <a href="mailto:#">first.last@example.com</a>
+          </address>
   </div>
 </div>
 
