maj page contact

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@ group: navigation
           <textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
           <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
       </div>
-          <input type='hidden' name='redirect_to' value='{% site.JB.BASE_PATH %}/contact.html' />
+          <input type='hidden' name='redirect_to' value='{{ site.JB.BASE_PATH }}/contact.html' />
           <input type="submit" name="submit" id="submit" value="Envoyer" class="btn btn-info pull-right">
           <br /><br /><br />
 
