--- a/contact.html
+++ b/contact.html
@@ -12,17 +12,28 @@ group: navigation
   </div>
   <form role="form" action="http://getsimpleform.com/messages?form_api_token=558a58d6d5f6be674ceb39832e01f5f0" method="post" >
     <div class="col-lg-6">
-      <div class="well well-sm"><strong><i class="glyphicon glyphicon-ok form-control-feedback"></i> Champ requis</strong></div>
       <div class="form-group">
         <label for="InputName">Votre nom</label>
         <div class="input-group">
-          <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Enter Name" required>
+          <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Votre nom" required>
+          <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+      </div>
+            <div class="form-group">
+        <label for="InputName">Votre prénom</label>
+        <div class="input-group">
+          <input type="text" class="form-control" name="InputFirstName" id="InputFirstName" placeholder="Votre prénom" required>
+          <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+      </div>
+                  <div class="form-group">
+        <label for="InputName">Votre téléphone</label>
+        <div class="input-group">
+          <input type="text" class="form-control" name="InputPhone" id="InputPhone" placeholder="Votre téléphone" required>
           <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
       </div>
       <div class="form-group">
         <label for="InputEmail">Votre adresse email</label>
         <div class="input-group">
-          <input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="Enter Email" required  >
+          <input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="Votre Email" required  >
           <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
       </div>
       <div class="form-group">
@@ -31,6 +42,7 @@ group: navigation
           <textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
           <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
       </div>
+      <div class="well well-sm"><small><i class="glyphicon glyphicon-ok form-control-feedback"></i> Champ requis</small></div>
           <input type='hidden' name='redirect_to' value='{{ site.JB.BASE_PATH }}/contact.html?msg=ok' />
           <input type="submit" name="submit" id="submit" value="Envoyer" class="btn btn-info pull-right">
           <br /><br /><br />
