--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@ group: navigation
                   <div class="form-group">
         <label for="InputName">Votre téléphone</label>
         <div class="input-group">
-          <input type="text" class="form-control" name="InputPhone" id="InputPhone" placeholder="Votre téléphone" required>
+          <input type="tel" class="form-control" name="InputPhone" id="InputPhone" placeholder="Votre téléphone" required>
           <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
       </div>
       <div class="form-group">
