--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@ group: navigation
             <abbr title="Fax">Fax :</abbr> 04.90.90.90.90<br>
             <abbr title="MAIL">MAIL :</abbr> <a href="mailto:#">first.last@example.com</a>
           </address>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2783.381308103884!2d4.853371999999999!3d45.76354800000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea8a865ecd5d%3A0x376fea93cb2570bd!2sElygestion!5e0!3m2!1sfr!2sfr!4v1411133069515" width="400" height="300" frameborder="0" style="border:0"></iframe>
   </div>
 </div>
 </div>
