--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@ group: navigation
 <div class="container">
 <div class="row">
   <div class="col-md-12">
+    <p><strong>Lorem ipsum Aliquip cupidatat dolore do ea ex sed tempor occaecat ad in tempor et proident officia ea ullamco in aliqua Duis id eu amet nostrud mollit dolore Ut enim irure amet labore incididunt non velit reprehenderit culpa ut in in sint aute nisi exercitation culpa sint ut exercitation officia sunt velit velit sit nostrud aliqua nisi</strong><br/><br/>voluptate enim dolore magna in nulla ullamco Ut qui in Excepteur enim nulla pariatur laboris deserunt consectetur id sunt laboris non qui occaecat voluptate anim ut occaecat cupidatat elit sint irure magna magna id id fugiat aliqua deserunt labore do ad ut dolor esse irure aliquip labore do ea eiusmod aliqua ad ullamco exercitation<br/> qui id dolor culpa consequat eu qui sed culpa ea voluptate Excepteur Ut mollit mollit commodo eu ut non dolor in nisi qui laboris in nisi dolore dolor amet consequat dolor sed ullamco consequat Ut esse ut amet do cillum aliqua ullamco fugiat in commodo ea reprehenderit Duis fugiat.</p>
   <div class="alert alert-success hidden" id="success"><strong><span class="glyphicon glyphicon-send"></span> Merci, votre message a été envoyé.</strong></div>
   <div class="alert alert-danger hidden"><span class="glyphicon glyphicon-alert"></span><strong> Oups, quelques erreurs dans le formulaire.</strong></div>
   </div>
