--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,12 @@ group: navigation
           <input type="text" class="form-control" name="InputFirstName" id="InputFirstName" placeholder="Votre prénom" required>
           <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
       </div>
+      <div class="form-group">
+        <label for="InputName">Société</label>
+        <div class="input-group">
+          <input type="text" class="form-control" name="InputSociete" id="InputSociete" placeholder="Votre société">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+      </div>
                   <div class="form-group">
         <label for="InputName">Votre téléphone</label>
         <div class="input-group">
@@ -45,7 +51,7 @@ group: navigation
       </div>
       <div class="well well-sm"><small><i class="glyphicon glyphicon-ok form-control-feedback"></i> Champ requis</small></div>
           <input type='hidden' name='redirect_to' value='{{ site.JB.BASE_PATH }}/contact.html?msg=ok' />
-          <input type="submit" name="submit" id="submit" value="Envoyer" class="btn btn-info pull-right">
+          <input type="submit" name="submit" id="submit" value="Envoyer" class="btn pull-right">
           <br /><br /><br />
 
     </div>
@@ -55,11 +61,10 @@ group: navigation
     <address>
     <h3>Notre adresse</h3>
             <strong>ELYGESTION</strong><br>
-            795 Folsom Ave, Suite 600<br>
-            San Francisco, CA 94107<br>
-            <abbr title="Phone">Tél :</abbr> 04.90.90.90.90<br>
-            <abbr title="Fax">Fax :</abbr> 04.90.90.90.90<br>
-            <abbr title="MAIL">MAIL :</abbr> <a href="mailto:#">first.last@example.com</a>
+             76, rue Crillon<br>
+            69006 Lyon<br>
+            <abbr title="Phone">Tél :</abbr> 04.37.47.26.25<br>
+            <abbr title="MAIL">MAIL :</abbr> <a href="mailto:contact@elygestion.fr">contact@elygestion.fr</a>
           </address>
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2783.381308103884!2d4.853371999999999!3d45.76354800000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea8a865ecd5d%3A0x376fea93cb2570bd!2sElygestion!5e0!3m2!1sfr!2sfr!4v1411133069515" width="400" height="300" frameborder="0" style="border:0"></iframe>
   </div>
