--- a/actualites.html
+++ b/actualites.html
@@ -1,8 +1,8 @@
 ---
-layout: post
-category : actualites
+layout: page
 title : "actualités"
-tagline: ""
+header : Post
+group: navigation
 tags : ["notre société","notre équipe","nos actifs gérés","nos références"]
 ---
 {% include JB/setup %}
