--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@ group: navigation
           <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
       </div>
       <div class="form-group">
-        <label for="InputName">Société</label>
+        <label for="InputName">Votre société</label>
         <div class="input-group">
           <input type="text" class="form-control" name="InputSociete" id="InputSociete" placeholder="Votre société">
           <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
@@ -63,10 +63,10 @@ group: navigation
             <strong>ELYGESTION</strong><br>
              76, rue Crillon<br>
             69006 Lyon<br>
-            <abbr title="Phone">Tél :</abbr> 04.37.47.26.25<br>
-            <abbr title="MAIL">MAIL :</abbr> <a href="mailto:contact@elygestion.fr">contact@elygestion.fr</a>
+            <abbr title="Phone">Tél. :</abbr> 04.37.47.26.25<br>
+            <abbr title="MAIL">E-mail :</abbr> <a href="mailto:contact@elygestion.fr">contact@elygestion.fr</a>
           </address>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2783.381308103884!2d4.853371999999999!3d45.76354800000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea8a865ecd5d%3A0x376fea93cb2570bd!2sElygestion!5e0!3m2!1sfr!2sfr!4v1411133069515" width="400" height="300" frameborder="0" style="border:0"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11132.027972649985!2d4.852983199999988!3d45.771050100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea8d3a4795c3%3A0x5ddcc5e85bd4c740!2sElygestion!5e0!3m2!1sfr!2sfr!4v1414423855788" width="400" height="300" frameborder="0" style="border:0"></iframe>
   </div>
 </div>
 </div>
