--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@ group: navigation
   <hr class="featurette-divider hidden-lg">
   <div class="col-lg-5 col-md-push-1">
     <address>
-    <h3>Notre adresse</h3>
+    <h3>Notre adresse :</h3>
             <strong>ELYGESTION</strong><br>
              76, rue Crillon<br>
             69006 Lyon<br>
