--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,8 @@ group: navigation
     <h3>Notre adresse :</h3>
             <strong>ELYGESTION</strong><br>
              76, rue Crillon<br>
-            69006 Lyon<br>
+             CS 70143<br>
+             69452 LYON CEDEX 06<br>
             <abbr title="Phone">Tél. :</abbr> 04.37.47.26.25<br>
             <abbr title="MAIL">E-mail :</abbr> <a href="mailto:contact@elygestion.fr">contact@elygestion.fr</a>
           </address>
