--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@ group: navigation
       <div class="form-group">
         <label for="InputMessage">Votre message</label>
         <div class="input-group">
-          <textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
+          <textarea name="message" id="InputMessage" class="form-control" rows="5" required></textarea>
           <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
       </div>
       <div class="well well-sm"><small><i class="glyphicon glyphicon-ok form-control-feedback"></i> Champ requis</small></div>
